Changelog
=========

* Force no cache on ajax so we can use ImageEditor behind a proxy-cache.
  [thomasdesvenain]

* French translations.
  [thomasdesvenain]

* Do not remove jquery ui 'global_include' on install
  not to break third part products using it.
  [thomasdesvenain]

1.7 - 2011-03-21
----------------

* Keep "Current image" link behavior untouched.
  Previously, clicking the "Current image" link opened the editor.
  [vincentfretin]

* Updated French translation.
  Redo and Undo translations were inversed.
  [vincentfretin]

* move back to collective.js.jqueryui since it now allows you
  to only show javascript on certain views.
  [vangheem]

* plone 4.1 compatible


1.6 - Released August 29, 2010
------------------------------

* stop using collective.js.jqueryui
  [vangheem]

* fixed some styling issues
  [vangheem]


1.5 - Released May 5, 2010
--------------------------

* Disable "Image Editor" content action/tab by default.
  [witsch]

1.4 - Released April 27, 2010
-----------------------------

* Minor templating fixes for Plone 4 compatibility.
  [witsch]

* Support per-field undo stacks.
  [witsch]

1.3 - Released April 23, 2010
-----------------------------

* Add support for multiple image fields on the same object and use sessions
  to store editing data like the undo stack etc.
  [witsch]

* Clear undo stack on invocation to avoid stale images after an update and
  prepare multi-field support.
  [witsch]

* Fix style information for missing action icons.
  [witsch]

* Allow invocation of editor directly from Archetypes' image widget.
  [witsch]

* Move the zoom slider into the actions dialog.
  [witsch]

* Closing the main editor dialog also closes the controls and zoom slider.
  [witsch]

* Add buildout and update test setup to use `collective.testcaselayer`.
  [witsch]

1.2 - Released February 15, 2010
--------------------------------

* The save as action now saves to the parent of original image
  instead of to the root of the site.