@@ -206,6 +206,15 @@ $(document).ready(function(){
         height:window_height - 40,
         position:[225, 10],
         close: function(event, ui){
+    		if(event.currentTarget.URL.indexOf('imageeditor.alagimp') > 0){
+    			/* on alagimp view, redirect to base view after close */
+    			window.location.href = event.currentTarget.baseURI + '/view';
+    			return false
+    		}
+    		/*
+    		TODO : this code doesn't works : no close method on those boxes
+    		making page reload
+    		*/
             $("#image-editor-controls").close();
             $("#zoom-slider-wrapper").close();
             alert('hi');
